Fixed image cutoff on links page

--- a/web/src/pages/links/links.scss
+++ b/web/src/pages/links/links.scss
@@ -33,7 +33,7 @@
 .logo {
   position: relative;
   z-index: 2;
-  width: 350px; 
+  width: 400px; 
   height: 350px;
   @include screen-tablet-max {
     width: 200px; 
